--- a/views/chat.html
+++ b/views/chat.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div class="chat" >
-        <h3>Welcome <%= username %></h3>
+        <h3>Welcome, <%= username %></h3>
         <div class="chat-window-container">
+            <div class="chat-background">
+            </div>
             <div id="chat-window">
             </div>
         </div>
