--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
         <title>Chat Everyone</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Indie+Flower" />
     </head>
     <body>
         <div class="home-background">
@@ -12,11 +13,16 @@
             <div class="signin-background">
             </div>
             <div class="signin-input" >
-                <h1>Chat Everyone</h1>
+                <h1>Welcome</h1>
                 <div>
                     <form method="POST" action="/chat" id="signin-form" >
-                        <input type="text" name="username" placeholder="Username" />
-                        <input type="submit" value="GO!" />
+                        <label for="signin-username">
+                            <input id="signin-username" type="text" name="username" placeholder="Username" />
+                            <input id="signin-password" type="password" name="password" placeholder="Password" />
+                        </label>
+                        <label>
+                            <input id="signin-submit" type="submit" value="GO!" />
+                        </label>
                     </form>
                 </div>
             </div>
