--- a/views/index.html
+++ b/views/index.html
@@ -20,9 +20,11 @@
                             <input id="signin-username" type="text" name="username" placeholder="Username" />
                             <input id="signin-password" type="password" name="password" placeholder="Password" />
                         </label>
-                        <label>
-                            <input id="signin-submit" type="submit" value="GO!" />
-                        </label>
+                        <div>
+                          <label>
+                              <input id="signin-submit" type="submit" value="GO!" />
+                          </label>
+                      </div>
                     </form>
                 </div>
             </div>
