--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,12 @@
                         </label>
                         <div>
                           <label>
+                            <div>
                               <input id="signin-submit" type="submit" value="GO!" />
+                            </div>
+                            <div>
+                              <a id="registration-link" href="/registration">Registration</a>
+                            </div>
                           </label>
                       </div>
                     </form>
