--- a/views/index.html
+++ b/views/index.html
@@ -25,11 +25,15 @@
                             <div>
                               <input id="signin-submit" type="submit" value="GO!" />
                             </div>
-                            <div>
-                              <a id="registration-link" href="/registration">Registration</a>
-                            </div>
                           </label>
                       </div>
+                    </form>
+                    <form method="GET" action="/registration" id="reg-link">
+                        <label>
+                            <div>
+                                <input id="registration-link" type="submit" value="Registration" />
+                            </div>
+                        </label>
                     </form>
                 </div>
             </div>
