--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,12 @@
 body {
   	font-family: Arial;
   	text-align: center;
+    margin: 0px;
 }
 
 a {
   	color:inherit;
+    text-decoration: none;
 }
 
 a:hover{
@@ -44,7 +46,7 @@ a:visited{
 		width:100%;
 	}
 }
-.signin-background{
+.signin-background, .registration-background{
 	position:absolute;
 	border-radius:20px;
 	left:0;
@@ -62,13 +64,15 @@ a:visited{
 	padding:10px;
 }
 
-.signin-input h1{
+.signin-input h1,.registration-input h1{
 	font-size: 50px;
   font-family: Indie Flower;
 	color:#7583D0;
 	border-bottom:1px solid #7583D0;
 	padding-bottom:15px;
-  margin-top: 5px;
+    margin-top: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 @media screen and (max-width: 768px) {
 	.signin-input h1{
@@ -78,20 +82,85 @@ a:visited{
 
 .signin-input input{
 	padding:10px 15px;
-  width: 50%;
+    width: 50%;
 	border-radius:5px;
 	border:1px solid #7583D0;
 }
 
 .signin-input input[type="submit"]{
-	background-color:#7583D0;
-	color:white;
-	font-weight: bold;
+  background-color:#7583D0;
+  color:white;
+  font-weight: bold;
   font-family: Indie Flower;
   padding-bottom: 5px;
   width: 100px;
   float: left;
   margin-left: 90px;
+}
+
+.registration-container{
+	margin-top:150px;
+	width:440px;
+	margin-left:auto;
+	margin-right:auto;
+	height:420px;
+	position:relative;
+
+}
+
+.registration-input{
+	height:100%;
+	text-align: center;
+}
+
+.registration-input input{
+	padding:10px 15px;
+    width: 50%;
+    margin: 5px;
+	border-radius:5px;
+	border:1px solid #7583D0;
+}
+
+.registration-input input[type="submit"]{
+  background-color:#7583D0;
+  color:white;
+  font-weight: bold;
+  font-family: Indie Flower;
+  padding-bottom: 5px;
+  width: 100px;
+  float: left;
+  margin-left: 160px;
+}
+
+.buttons{
+    background-color:#7583D0;
+    color:white;
+    font-size: 14px;
+    border-radius: 5px;
+    border-color: 1px solid #7583D0;
+    font-weight: bold;
+    font-family: Indie Flower;
+    padding: 5px 0px 5px 0px;
+    margin: 3px;
+    width: 80px;
+}
+
+#buttons-bar {
+  float: right;
+}
+
+#horizontal-nav{
+    background-color: #BBBBBB;
+    height: 40px;
+}
+
+#horizontal-nav h3{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    float: left;
+    padding-top: 10px;
+    padding-left: 20px;
+    font-family: Indie Flower;
 }
 
 #signin-username{
@@ -112,7 +181,7 @@ a:visited{
   font-family: Indie Flower;
   color:#7583D0;
   font-weight: bold;
-  margin: 8px 70px 0px 45px;
+  margin: 0px 70px 0px 45px;
 }
 
 .chat-window-container{
