--- a/views/chat.html
+++ b/views/chat.html
@@ -11,14 +11,14 @@
     <div id="horizontal-nav">
         <h3>Welcome, <%= username %></h3>
       <div id="buttons-bar">
-          <a href="profile.html">
-              <input class="buttons" type="button" value="Profile" name="profile">
+          <a href="/profile">
+              <button class="buttons">Profile</button>
           </a>
-          <a href="history.html">
-              <input class="buttons" type="button" value="History" name="history">
+          <a href="/history">
+              <button class="buttons">History</button>
           </a>
-          <a href="group_chat.html">          
-        <input class="buttons" type="button" value="Group Chat" name="group chat">
+          <a href="/group_chat">
+              <button class="buttons">Group Chat</button>
           </a>
       </div>
     </div>
