--- a/views/index.html
+++ b/views/index.html
@@ -28,13 +28,11 @@
                           </label>
                       </div>
                     </form>
-                    <form method="GET" action="/registration" id="reg-link">
-                        <label>
-                            <div>
-                                <input id="registration-link" type="submit" value="Registration" />
-                            </div>
-                        </label>
-                    </form>
+                    <a href="/registration">
+                        <button>
+                            Registration
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
